--- a/install/debian/fp-units-gfx.install.in
+++ b/install/debian/fp-units-gfx.install.in
@@ -1,10 +1,10 @@
 /usr/share/doc/fp-units-gfx
 
-/usr/lib/fpc/%{fpcversion}/units/linux/opengl
-/usr/lib/fpc/%{fpcversion}/units/linux/forms
-/usr/lib/fpc/%{fpcversion}/units/linux/svgalib
-/usr/lib/fpc/%{fpcversion}/units/linux/ggi
-/usr/lib/fpc/%{fpcversion}/units/linux/libgd
-/usr/lib/fpc/%{fpcversion}/units/linux/libpng
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/opengl
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/forms
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/svgalib
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/ggi
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/libgd
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/libpng
 
 /usr/bin/fd2pascal
