--- a/install/debian/fp-units-db.install.in
+++ b/install/debian/fp-units-db.install.in
@@ -1,9 +1,9 @@
 /usr/share/doc/fp-units-db
 
-/usr/lib/fpc/%{fpcversion}/units/linux/mysql
-/usr/lib/fpc/%{fpcversion}/units/linux/ibase
-/usr/lib/fpc/%{fpcversion}/units/linux/postgres
-/usr/lib/fpc/%{fpcversion}/units/linux/oracle
-/usr/lib/fpc/%{fpcversion}/units/linux/odbc
-/usr/lib/fpc/%{fpcversion}/units/linux/gdbm
-/usr/lib/fpc/%{fpcversion}/units/linux/sqlite
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/mysql
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/ibase
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/postgres
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/oracle
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/odbc
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/gdbm
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/sqlite
