--- a/install/debian/fp-units-net.install.in
+++ b/install/debian/fp-units-net.install.in
@@ -1,5 +1,5 @@
 /usr/share/doc/fp-units-net
 
-/usr/lib/fpc/%{fpcversion}/units/linux/inet
-/usr/lib/fpc/%{fpcversion}/units/linux/netdb
-/usr/lib/fpc/%{fpcversion}/units/linux/libasync
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/inet
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/netdb
+/usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/libasync
