--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -728,25 +728,22 @@ ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
 # Go32v1
 ifeq ($(OS_TARGET),go32v1)
 STATICLIBPREFIX=
-FPCMADEEXT=v1
-PACKAGESUFFIX=v1
+SHORTSUFFIX=v1
 endif
 
 # Go32v2
 ifeq ($(OS_TARGET),go32v2)
 STATICLIBPREFIX=
-FPCMADEEXT=dos
-ZIPSUFFIX=go32
+SHORTSUFFIX=dos
 endif
 
 # watcom
 ifeq ($(OS_TARGET),watcom)
 STATICLIBPREFIX=
-FPCMADEEXT=wat
-ZIPSUFFIX=watc
 OEXT=.obj
 ASMEXT=.asm
 SHAREDLIBEXT=.dll
+SHORTSUFFIX=wat
 endif
 
 # Linux
@@ -754,8 +751,7 @@ ifeq ($(OS_TARGET),linux)
 BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
-FPCMADEEXT=lnx
-ZIPSUFFIX=linux
+SHORTSUFFIX=lnx
 endif
 
 # FreeBSD
@@ -763,8 +759,7 @@ ifeq ($(OS_TARGET),freebsd)
 BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
-FPCMADEEXT=fbs
-ZIPSUFFIX=freebsd
+SHORTSUFFIX=fbs
 endif
 
 # NetBSD
@@ -772,8 +767,7 @@ ifeq ($(OS_TARGET),netbsd)
 BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
-FPCMADEEXT=nbs
-ZIPSUFFIX=netbsd
+SHORTSUFFIX=nbs
 endif
 
 # OpenBSD
@@ -781,15 +775,13 @@ ifeq ($(OS_TARGET),openbsd)
 BATCHEXT=.sh
 EXEEXT=
 HASSHAREDLIB=1
-FPCMADEEXT=obs
-ZIPSUFFIX=openbsd
+SHORTSUFFIX=obs
 endif
 
 # Win32
 ifeq ($(OS_TARGET),win32)
 SHAREDLIBEXT=.dll
-FPCMADEEXT=w32
-ZIPSUFFIX=w32
+SHORTSUFFIX=w32
 endif
 
 # OS/2
@@ -798,8 +790,7 @@ BATCHEXT=.cmd
 AOUTEXT=.out
 STATICLIBPREFIX=
 SHAREDLIBEXT=.dll
-FPCMADEEXT=os2
-ZIPSUFFIX=os2
+SHORTSUFFIX=os2
 ECHO=echo
 endif
 
@@ -809,8 +800,7 @@ BATCHEXT=.cmd
 AOUTEXT=.out
 STATICLIBPREFIX=
 SHAREDLIBEXT=.dll
-FPCMADEEXT=emx
-ZIPSUFFIX=emx
+SHORTSUFFIX=emx
 ECHO=echo
 endif
 
@@ -818,86 +808,92 @@ endif
 ifeq ($(OS_TARGET),amiga)
 EXEEXT=
 SHAREDLIBEXT=.library
-FPCMADEEXT=amg
+SHORTSUFFIX=amg
 endif
 
 # MorphOS
 ifeq ($(OS_TARGET),morphos)
 EXEEXT=
 SHAREDLIBEXT=.library
-FPCMADEEXT=mos
+SHORTSUFFIX=mos
 endif
 
 # Atari
 ifeq ($(OS_TARGET),atari)
 EXEEXT=.ttp
-FPCMADEEXT=ata
+SHORTSUFFIX=ata
 endif
 
 # BeOS
 ifeq ($(OS_TARGET),beos)
 BATCHEXT=.sh
 EXEEXT=
-FPCMADEEXT=be
-ZIPSUFFIX=be
+SHORTSUFFIX=be
 endif
 
 # Solaris
 ifeq ($(OS_TARGET),sunos)
 BATCHEXT=.sh
 EXEEXT=
-FPCMADEEXT=sun
-ZIPSUFFIX=sun
+SHORTSUFFIX=sun
 endif
 
 # QNX
 ifeq ($(OS_TARGET),qnx)
 BATCHEXT=.sh
 EXEEXT=
-FPCMADEEXT=qnx
-ZIPSUFFIX=qnx
+SHORTSUFFIX=qnx
 endif
 
 # Netware clib
 ifeq ($(OS_TARGET),netware)
 EXEEXT=.nlm
 STATICLIBPREFIX=
-FPCMADEEXT=nw
-ZIPSUFFIX=nw
+SHORTSUFFIX=nw
 endif
 
 # Netware libc
 ifeq ($(OS_TARGET),netwlibc)
 EXEEXT=.nlm
 STATICLIBPREFIX=
-FPCMADEEXT=nwl
-ZIPSUFFIX=nwl
+SHORTSUFFIX=nwl
 endif
 
 # MacOS
 ifeq ($(OS_TARGET),macos)
 BATCHEXT=
 EXEEXT=
-FPCMADEEXT=mac
-ZIPSUFFIX=macos
 DEBUGSYMEXT=.xcoff
+SHORTSUFFIX=mac
 endif
 
 # Darwin
 ifeq ($(OS_TARGET),darwin)
 BATCHEXT=.sh
 EXEEXT=
-FPCMADEEXT=dwn
 HASSHAREDLIB=1
-ZIPSUFFIX=darwin
+SHORTSUFFIX=dwn
 endif
 
-# Generate fpcmade.<x>, use for 8.3 limited OS's the short extension
-# Otherwise use the full name
+# For 8.3 limited OS's the short suffixes
+# Otherwise use the full source/target names
 ifneq ($(findstring $(OS_SOURCE),$(LIMIT83fs)),)
-FPCMADE=fpcmade.$(FPCMADEEXT)
+FPCMADE=fpcmade.$(SHORTSUFFIX)
+ZIPSUFFIX=$(SHORTSUFFIX)
+ZIPCROSSPREFIX=
+ZIPSOURCESUFFIX=src
+ZIPEXAMPLESUFFIX=exm
 else
 FPCMADE=fpcmade.$(FULL_TARGET)
+ZIPSOURCESUFFIX=.source
+ZIPEXAMPLESUFFIX=.examples
+ifdef CROSSCOMPILE
+ZIPSUFFIX=.$(FULL_SOURCE)
+ZIPCROSSPREFIX=$(FULL_TARGET)-
+else
+ZIPSUFFIX=.$(FULL_TARGET)
+ZIPCROSSPREFIX=
+endif
 endif
 
 else
@@ -1743,8 +1739,12 @@ ifndef ZIPNAME
 ifdef DIST_ZIPNAME
 ZIPNAME=$(DIST_ZIPNAME)
 else
-ZIPNAME=$(ZIPPREFIX)$(PACKAGE_NAME)$(ZIPSUFFIX)
+ZIPNAME=$(PACKAGE_NAME)
 endif
+endif
+
+ifndef FULLZIPNAME
+FULLZIPNAME=$(ZIPCROSSPREFIX)$(ZIPPREFIX)$(ZIPNAME)$(ZIPSUFFIX)
 endif
 
 # ZipTarget
@@ -1781,10 +1781,10 @@ endif
 ZIPCMD_CDPACK:=cd $(subst /,$(ZIPPATHSEP),$(PACKDIR))
 ZIPCMD_CDBASE:=cd $(subst /,$(ZIPPATHSEP),$(BASEDIR))
 ifdef USETAR
-ZIPDESTFILE:=$(DIST_DESTDIR)/$(ZIPNAME)$(TAREXT)
+ZIPDESTFILE:=$(DIST_DESTDIR)/$(FULLZIPNAME)$(TAREXT)
 ZIPCMD_ZIP:=$(TARPROG) cf$(TAROPT) $(ZIPDESTFILE) *
 else
-ZIPDESTFILE:=$(DIST_DESTDIR)/$(ZIPNAME)$(ZIPEXT)
+ZIPDESTFILE:=$(DIST_DESTDIR)/$(FULLZIPNAME)$(ZIPEXT)
 ZIPCMD_ZIP:=$(subst /,$(ZIPPATHSEP),$(ZIPPROG)) -Dr $(ZIPOPT) $(ZIPDESTFILE) *
 endif
 
@@ -1815,11 +1815,11 @@ endif
         $(DELTREE) $(PACKDIR)
 
 fpc_zipsourceinstall:
-        $(MAKE) fpc_zipinstall ZIPTARGET=sourceinstall ZIPSUFFIX=src
+        $(MAKE) fpc_zipinstall ZIPTARGET=sourceinstall ZIPSUFFIX=$(ZIPSOURCESUFFIX)
 
 fpc_zipexampleinstall:
 ifdef HASEXAMPLES
-        $(MAKE) fpc_zipinstall ZIPTARGET=exampleinstall ZIPSUFFIX=exm
+        $(MAKE) fpc_zipinstall ZIPTARGET=exampleinstall ZIPSUFFIX=$(ZIPEXAMPLESUFFIX)
 endif
 
 fpc_zipdistinstall:
@@ -1982,8 +1982,11 @@ fpc_baseinfo:
         @$(ECHO)  == Install info ==
         @$(ECHO)
         @$(ECHO)  DateStr.............. $(DATESTR)
+        @$(ECHO)  ZipName.............. $(ZIPNAME)
         @$(ECHO)  ZipPrefix............ $(ZIPPREFIX)
+        @$(ECHO)  ZipCrossPrefix....... $(ZIPCROSSPREFIX)
         @$(ECHO)  ZipSuffix............ $(ZIPSUFFIX)
+        @$(ECHO)  FullZipName.......... $(FULLZIPNAME)
         @$(ECHO)  Install FPC Package.. $(INSTALL_FPCPACKAGE)
         @$(ECHO)
         @$(ECHO)  Install base dir..... $(INSTALL_BASEDIR)
