+ TTimedDialog and TimedMessageBox added

--- a/fv/Makefile
+++ b/fv/Makefile
@@ -222,7 +222,7 @@ PACKAGESDIR:=$(wildcard $(FPCDIR) $(FPCDIR)/packages/base $(FPCDIR)/packages/ext
 override PACKAGE_NAME=fv
 override PACKAGE_VERSION=1.9.4
 override TARGET_UNITS+=buildfv
-override TARGET_IMPLICITUNITS+=app colortxt dialogs drivers editors fvcommon fvconsts gadgets histlist inplong memory menus msgbox resource statuses stddlg tabs time validate views sysmsg asciitab
+override TARGET_IMPLICITUNITS+=app colortxt dialogs drivers editors fvcommon fvconsts gadgets histlist inplong memory menus msgbox resource statuses stddlg tabs time validate views sysmsg asciitab timeddlg
 override TARGET_EXAMPLEDIRS+=test
 override INSTALL_BUILDUNIT=buildfv
 override INSTALL_FPCPACKAGE=y
