--- a/docs/Makefile.4ht
+++ b/docs/Makefile.4ht
@@ -4,8 +4,6 @@
 HTFONTS=/usr/share/texmf/tex/generic/tex4ht/ht-fonts/
 .PHONY: preamble3 preamble4 $(HTML)
 
-htmlincludes: includes
-
 preamble3:
 	cp preamble.ts3 preamble.inc		
 
@@ -24,12 +22,12 @@ preamble4:
 	rm $(basename $<)*.html
 
 
-user: htmlincludes preamble3 user.html 
-units: htmlincludes preamble3 units.html
-prog: htmlincludes preamble3 prog.html
-onechap: htmlincludes preamble3 onechap.html
-ref: htmlincludes preamble4 ref.html
-fpdoc: htmlincludes preamble3 fpdoc.html
-chart: htmlincludes preamble3 chart.html
+user: $(INCLUDES) preamble3 user.html 
+units: $(INCLUDES) preamble3 units.html
+prog: $(INCLUDES) preamble3 prog.html
+onechap: $(INCLUDES) preamble3 onechap.html
+ref: $(INCLUDES) preamble4 ref.html
+fpdoc: $(INCLUDES) preamble3 fpdoc.html
+chart: $(INCLUDES) preamble3 chart.html
 
-html: htmlincludes $(HTML)
+html: $(INCLUDES) $(HTML)
