--- a/docs/Makefile.hev
+++ b/docs/Makefile.hev
@@ -2,16 +2,14 @@
 # Create HTML using hevea tex 2 html conversion
 #
 
-htmlincludes: includes
-
 %.html: %.tex fpc-hevea.tex
 	$(HEVEA) $(HEVEAOPTS) $<
 
-user: htmlincludes user.html
-units: htmlincludes units.html
-prog: htmlincludes prog.html
-onechap: htmlincludes onechap.html
-ref: htmlincludes ref.html
-fpdoc: htmlincludes fpdoc.html
+user: $(INCLUDES) user.html
+units: $(INCLUDES) units.html
+prog: $(INCLUDES) prog.html
+onechap: $(INCLUDES) onechap.html
+ref: $(INCLUDES) ref.html
+fpdoc: $(INCLUDES) fpdoc.html
 
-html: htmlincludes $(addsuffix .html,$(HTML))
+html: $(INCLUDES) $(addsuffix .html,$(HTML))
